[UPD] detection of the handler
change the way I handle the params to avoid problem when calling the handler, and ensuring that the handler takes a function as well as an api
